[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "sieve-ai"
version = "0.1.0"
description = "High-performance LLM token optimization engine"
readme = "../README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["python"]
module-name = "sieve.sieve_core"
manifest-path = "../sieve-core/Cargo.toml"
