[package]
name = "sieve-core"
version = "0.1.0"
edition = "2021"
description = "High-performance LLM token optimization engine"
license = "MIT"
repository = "https://github.com/sieve-ai/sieve-core"

[lib]
name = "sieve_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"

[features]
default = ["python"]
python = ["pyo3"]
ffi = []
